# robertito

./: CMakeLists.txt  package.xml  robertito.ino  robertito.xml
config/: controllers.yaml  joy.yaml
description/: .robot_core.xacro.swo  robot.urdf.xacro  robot_core.xacro  robot_properties.xacro  robot_steering.xacro  robot_swerve_drive.xacro  robot_wheel.xacro  ros2_control.xacro  ros2_control_wheel.xacro
hardware/: robertito_driver.cpp
hardware/include/robertito/: robertito_driver.hpp
launch/: robertito.launch.py  rsp.launch.py
openmv/: ei_object_detection.py  light_detection.py
rust-bt/: Cargo.toml
rust-bt/src/: main.rs
